--- a/ML_Project.ipynb
+++ b/ML_Project.ipynb
@@ -16,12 +16,10 @@
    "metadata": {},
    "source": [
     "**GROUP**\n",
-    "- Anis Hazirah binit Mohamad Sabry (1211300373) - Data Preparation, Exploratory Data Analysis, PCA Implementation\n",
-    "- Nuha\n",
-    "- Lutfi\n",
-    "- Ong Shi Yi\n",
-    "\n",
-    "// add ur own names this should be alphabetical maybe"
+    "- Anis Hazirah binti Mohamad Sabry (1211300373) - Data Preparation, Exploratory Data Analysis, PCA Implementation\n",
+    "- Nuha Awadah binti Mohd Yusof (1211303209) - Linear Regression\n",
+    "- Muhammad Lutfi bin Mohd Izzat (1201100521) - Logistic Regression\n",
+    "- Ong Shi Yi (1201101485) - K-Means"
    ]
   },
   {
