added conclusion ciikai2

--- a/1_LabEnhancements_PCA/LabEnhancements_PCA.ipynb
+++ b/1_LabEnhancements_PCA/LabEnhancements_PCA.ipynb
@@ -9,13 +9,10 @@
         "# PCA\n",
         "_by Anis Hazirah binti Mohamad Sabry 1211300373_\n",
         "\n",
-        "Possible enhancements are:\n",
-        "- To clarify certain concepts already presented.\n",
-        "- To explore more advanced concept of the lab materials.\n",
-        "- To provide visualizations to aid deeper understanding of the lab materials.\n",
-        "- To apply the materials to real-world datasets to further demonstrate how those materials can be used.\n",
-        "- To compare different between the various methods, approaches, or models.\n",
-        "- To demonstrate the advantages and disadvantages of various methods, approaches, or models."
+        "- Clarification of the PCA method\n",
+        "- Visualisation of advanced concepts\n",
+        "- Usage of real world dataset\n",
+        "- Difference in data type compatibility with PCA"
       ]
     },
     {
