--- a/5_Project/ML_Project.ipynb
+++ b/5_Project/ML_Project.ipynb
@@ -5606,8 +5606,6 @@
     }
    ],
    "source": [
-    "from sklearn.model_selection import learning_curve\n",
-    "\n",
     "def plot_learning_curves(estimator, X, y):\n",
     "    train_sizes, train_scores, test_scores = learning_curve(\n",
     "        estimator, X, y, train_sizes=np.linspace(0.1, 1.0, 10), \n",
@@ -6432,7 +6430,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# END"
+    "# Conclusion\n",
+    "\n",
+    "As the dataset was presented in a categorical format, showcasing that it isn't compabitible with using several machine learning techniques.\n",
+    "In terms of PCA, and Linear Regression, and KMeans, the initial usage of these algorithms were designed to handle continous data. As a result, the outcome of these algorthims revealed low quality results. Logistic regression on the other hand, was designed to handle categorical data flawlessly, resulting in a high accuracy on the training and testing data.\n",
+    "\n",
+    "Other methods that are more equipped to handle categorical data, such as Support Vector Machines, would be more appropriate to be used for this dataset. Ensemble methods such as Random Forests and Gradient Boosting would effictively handle both numerical and categorical data with ease."
    ]
   }
  ],
